--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kristina Aleksandrovna</title>
     <link rel="stylesheet" href="main.css">
-    
 </head>
 <body>
     <header>
-
+        <nav>
+            <div class="logo">XCAELRAD</div>
+            <ul class="nav-link">
+                <li><a href="index.html">XCaelrad</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="https://github.com/XCaelrad" target="_blank">GITHUB</a></li>
+                <li><a href="https://t.me/XCaelrad">TELEGRAM</a></li>
+            </ul>
+         </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
