--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kristina Aleksandrovna</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="./assets/images/icons/logo.png" type="image/logo">
 </head>
 <body>
     <header>
