feat:added information in the main tag

--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
          </nav>
     </header>
     <main>
-
+        <div class="container">
+            <div class="text-section">JUNIOR</div>
+            <h1>WEB DEVELOPER</h1>
+            <p>Hi, My Name Kristina. I am 24 years old, motivated junior web developer ready for new opportunities and challenges. Looking for a new position to develop my skills and contribute to interesting projects.</p>
+            <p>I strive to discover something new every day, improve my skills and effectively solve users' problems. I am able to quickly analyze problems and find solutions both independently and in a team. My main advantage is that I learn new things quickly.</p>
+        </div>
+        <div class="MySelf">
+            <img src="./assets/images/img/Myself.jpg" alt="MySelf">
+        </div>
     </main>
     <footer>
 
