--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <header>
         <nav>
-            <div class="logo">XCAELRAD</div>
+            <div class="logo">
+                <a href="index.html">XCAELRAD</a>
+            </div>
             <ul class="nav-link">
-                <li><a href="index.html">XCaelrad</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="https://github.com/XCaelrad" target="_blank">GITHUB</a></li>
                 <li><a href="https://t.me/XCaelrad">TELEGRAM</a></li>
