--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <a href="index.html">XCAELRAD</a>
+            <div class="logo-link">
+                <a href="index.html" class="logo">XCAELRAD</a>
             </div>
             <ul class="nav-link">
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="https://github.com/XCaelrad" target="_blank">GITHUB</a></li>
-                <li><a href="https://t.me/XCaelrad">TELEGRAM</a></li>
+                <li><a href="cv.html" class="cv">CV</a></li>
+                <li><a href="https://github.com/XCaelrad" target="_blank" class="github">GITHUB</a></li>
+                <li><a href="https://t.me/XCaelrad" class="tg">TELEGRAM</a></li>
             </ul>
          </nav>
     </header>
@@ -27,8 +27,8 @@
             <p>Hi, My Name Kristina. I am 24 years old, motivated junior web developer ready for new opportunities and challenges. Looking for a new position to develop my skills and contribute to interesting projects.</p>
             <p>I strive to discover something new every day, improve my skills and effectively solve users' problems. I am able to quickly analyze problems and find solutions both independently and in a team. My main advantage is that I learn new things quickly.</p>
         </div>
-        <div class="MySelf">
-            <img src="./assets/images/img/Myself.jpg" alt="MySelf">
+        <div class="image-section">
+            <img src="./assets/images/img/Myself.jpg" alt="MySelf" class="MySelf">
         </div>
     </main>
     <footer>
