feat: add css style for main and nav

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <nav>
+            <div class="nav">
             <div class="logo-link">
                 <a href="index.html" class="logo">XCAELRAD</a>
             </div>
@@ -18,21 +19,25 @@
                 <li><a href="https://github.com/XCaelrad" target="_blank" class="github">GITHUB</a></li>
                 <li><a href="https://t.me/XCaelrad" class="tg">TELEGRAM</a></li>
             </ul>
+            </div>  
          </nav>
     </header>
     <main>
         <div class="container">
-            <div class="text-section">JUNIOR</div>
-            <h1>WEB DEVELOPER</h1>
-            <p>Hi, My Name Kristina. I am 24 years old, motivated junior web developer ready for new opportunities and challenges. Looking for a new position to develop my skills and contribute to interesting projects.</p>
-            <p>I strive to discover something new every day, improve my skills and effectively solve users' problems. I am able to quickly analyze problems and find solutions both independently and in a team. My main advantage is that I learn new things quickly.</p>
-        </div>
-        <div class="image-section">
-            <img src="./assets/images/img/Myself.jpg" alt="MySelf" class="MySelf">
+            <div class="text-section">
+                <span class="label">JUNIOR</span>
+                <h1>WEB DEVELOPER</h1>
+            <div class="text">
+                <p>Hi, My Name Kristina. I am 24 years old, motivated junior web developer ready for new opportunities and challenges. Looking for a new position to develop my skills and contribute to interesting projects.</p>
+                <p>I strive to discover something new every day, improve my skills and effectively solve users' problems. I am able to quickly analyze problems and find solutions both independently and in a team. My main advantage is that I learn new things quickly.</p>
+            </div>
+            </div>
+            <div class="image-section">
+                <img src="./assets/images/img/Myself.jpg" alt="MySelf">
+            </div>
         </div>
     </main>
     <footer>
-
     </footer>
 </body>
 </html>
