--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <a href="index.html" class="logo">XCAELRAD</a>
             </div>
             <ul class="nav-link">
+                <li><a href="blog.html" class="blog">BLOG</a></li>
                 <li><a href="cv.html" class="cv">CV</a></li>
                 <li><a href="https://github.com/XCaelrad" target="_blank" class="github">GITHUB</a></li>
                 <li><a href="https://t.me/XCaelrad" class="tg">TELEGRAM</a></li>
