feat: feat: added burger menu for mobile version

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="mobile.css">
     <link rel="icon" href="./assets/images/icons/logo.png" type="image/logo">
+
 </head>
 <body>
     <header>
@@ -14,6 +15,11 @@
             <div class="nav">
             <div class="logo-link">
                 <a href="index.html" class="logo">XCAELRAD</a>
+            </div>
+            <div class="burger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
             <ul class="nav-link">
                 <li><a href="blog.html" class="blog">BLOG</a></li>
