fix: eliminating conflict between css file syntaxes

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kristina Aleksandrovna</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="mobile_ios.css">
     <link rel="icon" href="./assets/images/icons/logo.png" type="image/logo">
-
 </head>
 <body>
     <header>
