feat: update and a new html and css files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kristina Aleksandrovna</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="mobile_ios.css">
     <link rel="icon" href="./assets/images/icons/logo.png" type="image/logo">
 </head>
 <body>
@@ -30,19 +29,24 @@
          </nav>
     </header>
     <main>
+    <div class="info">
         <div class="container">
-            <div class="text-section">
-                <span class="label">JUNIOR</span>
-                <h1>WEB DEVELOPER</h1>
-            </div>
-            <div class="image-section">
-                <img src="./assets/images/img/Myself.jpg" alt="MySelf">
-            </div>
+            <h1>
+                <span class="web">WEB</span>
+                <div class="devoloper-wrapper">
+                    <span class="badge">JUNIOR</span>
+                    <span class="devoloper">DEVELOPER</span>
+                </div>
+            </h1>
             <div class="text">
-                <p>Hi, My Name Kristina. I am 24 years old, motivated junior web developer ready for new opportunities and challenges. Looking for a new position to develop my skills and contribute to interesting projects.</p>
-                <p>I strive to discover something new every day, improve my skills and effectively solve users' problems. I am able to quickly analyze problems and find solutions both independently and in a team. My main advantage is that I learn new things quickly.</p>
+                <div class="left">Hi, My Name Kristina. I am 24 years old, motivated junior web developer ready for new opportunities and challenges. Looking for a new position to develop my skills and contribute to interesting projects.</div>
+                <div class="right">I strive to discover something new every day, improve my skills and effectively solve users' problems. I am able to quickly analyze problems and find solutions both independently and in a team. My main advantage is that I learn new things quickly.</div>  
             </div>
         </div>
+        <div class="image-section">
+            <img src="./assets/images/img/Myself.jpg" alt="MySelf">
+        </div>
+    </div>
     </main>
     <footer>
     </footer>
